added value to input

--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
             <div class="form-group">
               <label for="commentsection">Comment Section</label>
               <input id="commentsection" class="form-control" type="text-area"></input>
-              <input type="submit" name="Submit">Post Comment</input>
+              <input type="submit" name="Submit" value="Post Comment">Post Comment</input>
             </div>
           </form>
         </div>
