--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
                repudiated and annoyances accepted. The wise man therefore always
                holds in these matters to this principle of selection: he rejects
                pleasures to secure other greater pleasures, or else he endures
-               pains to avoid worse pains.</p>
+               pains to avoid worse pains. Added text</p>
           </section>
         </div>
         <div class="col-1"></div>
