added name to form control

--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,8 @@
           <form action="https://www.google.com/search">
             <div class="form-group">
               <label for="commentsection">Comment Section</label>
-              <input id="commentsection" class="form-control" type="text-area"></input>
+              <input name="commentVar" id="commentsection" class="form-control"
+               type="text-area"></input>
               <input type="submit" name="Submit" value="Post Comment"></input>
             </div>
           </form>
