added name to form control

--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
               <label for="commentsection">Comment Section</label>
               <input name="commentVar" id="commentsection" class="form-control"
                type="text-area"></input>
-              <input type="submit" name="Submit" value="Post Comment"></input>
+              <input type="submit" name="Submit" value="Post Comment"/>
             </div>
           </form>
         </div>
