Comment out footer

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <a href="https://placeholder.com"><img src="http://via.placeholder.com/140x90"></a>
         <a href="https://placeholder.com"><img src="http://via.placeholder.com/140x90"></a>
         <a href="https://placeholder.com"><img src="http://via.placeholder.com/140x90"></a>
-      </div>-->
-    </footer>
+      </div>
+    </footer>-->
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
