--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
             <div class="form-group">
               <label for="commentsection">Comment Section</label>
               <input name="commentVar" id="commentsection" class="form-control"
-               type="text-area"></input>
+               type="text-area"/>
               <input type="submit" name="Submit" value="Post Comment"/>
             </div>
           </form>
