--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
               </a>
             </div>
           </div>
-        <div class="row justify-content-center">
+	     </div>
+		 <div class="container-fluid">
+		  <div class="row justify-content-center">
             <div class="col-1"></div>
             <div class="col-md mx-auto">
               <a href="https://placeholder.com">
