--- a/blog.html
+++ b/blog.html
@@ -18,8 +18,8 @@
           <aside>
             <nav class="navbar navbar-light bg-white">
               <nav class="flex-column">
-                <a class="nav-item nav-link active" href="">Home</a>
-                <a class="nav-item nav-link" href="">Blog</a>
+                <a class="nav-item nav-link" href="">Home</a>
+                <a class="nav-item nav-link active" href="index.html">Blog</a>
               </nav>
             </nav>
           </aside>
