--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
           </div>
 	     </div>
-		 <div class="container-fluid">
+		 <div class="container-fluid text-center">
 		  <div class="row justify-content-center">
             <div class="col-1"></div>
             <div class="col-md mx-auto">
