--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
           </div>
 	     </div>
 		 <div class="container-fluid text-center">
-		  <div class="row justify-content-center">
+		  <div class="row">
             <div class="col-1"></div>
-            <div class="col-md mx-auto">
+            <div class="col-md">
               <a href="https://placeholder.com">
                 <img src="http://via.placeholder.com/210x140">
               </a>
             </div>
-            <div class="col-sm mx-auto">
+            <div class="col-md">
               <a href="https://placeholder.com">
                 <img src="http://via.placeholder.com/210x140">
               </a>
             </div>
-            <div class="col-md mx-auto">
+            <div class="col-md">
               <a href="https://placeholder.com">
                 <img src="http://via.placeholder.com/210x140">
               </a>
             </div>
-            <div class="col-md mx-auto">
+            <div class="col-md">
               <a href="https://placeholder.com">
                 <img src="http://via.placeholder.com/210x140">
               </a>
