add ability to go back to home page

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,8 @@
             <nav class="navbar navbar-light bg-white">
               <nav class="flex-column">
                 <a class="nav-item nav-link" href="">Home</a>
-                <a class="nav-item nav-link active" href="index.html">Blog</a>
+                <a class="nav-item nav-link active"
+                 href="https://stephenleija742.github.io/">Blog</a>
               </nav>
             </nav>
           </aside>
