--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
               <nav class="flex-column">
                 <a class="nav-item nav-link" href="">Home</a>
                 <a class="nav-item nav-link active"
-                 href="https://stephenleija742.github.io/">Blog</a>
+                 href="https://stephenleija742.github.io">Blog</a>
               </nav>
             </nav>
           </aside>
