changed href to url on home nav-link

--- a/blog.html
+++ b/blog.html
@@ -18,9 +18,10 @@
           <aside>
             <nav class="navbar navbar-light bg-white">
               <nav class="flex-column">
-                <a class="nav-item nav-link" href="">Home</a>
+                <a class="nav-item nav-link"
+                 href="https://stephenleija742.github.io">Home</a>
                 <a class="nav-item nav-link active"
-                 href="https://stephenleija742.github.io">Blog</a>
+                 href="">Blog</a>
               </nav>
             </nav>
           </aside>
