added collapsible feature for sidebar

--- a/blog.html
+++ b/blog.html
@@ -15,16 +15,22 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-1">
-          <aside>
-            <nav class="navbar navbar-light bg-white">
+            <nav class="navbar navbar-dark bg-dark h-100 w-100 navbar-expand-lg"
+             style="position: absolute; left: 0;">
+             <button class="navbar-toggler w-100" type="button" data-toggle="collapse"
+              data-target="navbarToggler" aria-controls="navbarToggler"
+              aria-expanded="false" aria-label="Toggle navigation"
+              style="position: absolute; left: 0; top: 0;">
+               <span class="navbar-toggler-icon"></span>
+             </button>
+             <div class="collapse navbar-collapse" id="navbarToggler"
+              style="position: absolute; left: 0; top: 0;">
               <nav class="flex-column">
-                <a class="nav-item nav-link"
-                 href="https://stephenleija742.github.io">Home</a>
-                <a class="nav-item nav-link active"
-                 href="">Blog</a>
+                <a class="nav-link" style="padding-left: 10%" href="https://stephenleija742.github.io">Home</a>
+                <a class="nav-link active" style="padding-left: 10%" href="">Blog</a>
               </nav>
+             </div>
             </nav>
-          </aside>
         </div>
         <div class="col-10 text-center">
           <section>
