--- a/blog.html
+++ b/blog.html
@@ -12,10 +12,25 @@
       crossorigin="anonymous">
   </head>
   <body>
+    <div class="container-fluid px-0">
+      <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+       <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="navbarToggler" aria-controls="navbarToggler"
+        aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse" id="navbarToggler">
+        <nav class="navbar-nav">
+          <a class="nav-item nav-link" href="https://stephenleija742.github.io">Home</a>
+          <a class="nav-item nav-link active" href="">Blog</a>
+        </nav>
+       </div>
+     </nav>
+    </div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-1">
-            <nav class="navbar navbar-dark bg-dark h-100 w-100 navbar-expand-lg"
+            <!--<nav class="navbar navbar-dark bg-dark h-100 w-100 navbar-expand-lg"
              style="position: absolute; left: 0;">
              <button class="navbar-toggler w-100" type="button" data-toggle="collapse"
               data-target="navbarToggler" aria-controls="navbarToggler"
@@ -30,7 +45,7 @@
                 <a class="nav-link active" style="padding-left: 10%" href="">Blog</a>
               </nav>
              </div>
-            </nav>
+           </nav>-->
         </div>
         <div class="col-10 text-center">
           <section>
