--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
        </button>
        <div class="collapse navbar-collapse" id="navbarToggler">
         <nav class="navbar-nav">
-          <a class="nav-item nav-link" href="#">Home</a>
-          <a class="nav-item nav-link active" href="blog.html">Blog</a>
+          <a class="nav-item nav-link active" href="#">Home</a>
+          <a class="nav-item nav-link" href="blog.html">Blog</a>
         </nav>
        </div>
      </nav>
