--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="min-height: 100%; position: relative;">
   <head>
     <title>My Portfolio</title>
     <meta charset="utf-8">
@@ -10,26 +10,29 @@
       integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
       crossorigin="anonymous">
   </head>
-  <body>
-    <div class="container-fluid px-0">
-      <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-       <button class="navbar-toggler" type="button" data-toggle="collapse"
+  <body style="height: 100%;">
+    <div class="container-fluid px-0" style="position: absolute; top: 0; bottom: 0; right: 0; left: 0;">
+      <nav class="navbar navbar-dark bg-dark h-100 navbar-expand-lg"
+       style="position: relative; left: 0; width: 16.666667%;">
+       <button class="navbar-toggler w-100" type="button" data-toggle="collapse"
         data-target="navbarToggler" aria-controls="navbarToggler"
-        aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
+        aria-expanded="false" aria-label="Toggle navigation"
+        style="position: relative; top: -41%;">
+         <span class="navbar-toggler-icon w-100"></span>
        </button>
-       <div class="collapse navbar-collapse" id="navbarToggler">
-        <nav class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Home</a>
-          <a class="nav-item nav-link" href="blog.html">Blog</a>
+       <div class="collapse navbar-collapse" id="navbarToggler"
+        style="position: relative; top: -39%;">
+        <nav class="navbar-nav flex-column mx-auto">
+          <a class="nav-link" href="https://stephenleija742.github.io">Home</a>
+          <a class="nav-link active" href="">Blog</a>
         </nav>
-       </div>
-     </nav>
+      </div>
+    </nav>
     </div>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-1"></div>
-          <div class="col-9 mx-auto">
+        <div class="col-2"></div>
+          <div class="col-8 mx-auto">
             <section>
               <h1 class="text-center">About Me</h1>
               <p class="text-justify">Hi, my name is Stephen Leija</p>
@@ -53,7 +56,7 @@
 		 <div class="container-fluid text-center">
 		  <div class="row">
       </hr>
-            <div class="col-1"></div>
+            <div class="col-2"></div>
             <div class="col-md">
               <a href="https://placeholder.com">
                 <img src="http://via.placeholder.com/210x140">
@@ -74,7 +77,7 @@
                 <img src="http://via.placeholder.com/210x140">
               </a>
             </div>
-            <div class="col-1"></div>
+            <div class="col-2"></div>
         </div>
     </div>
     <!--<footer>
