added external stylesheet for Navbar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="min-height: 100%; position: relative;">
+<html lang="en">
   <head>
     <title>My Portfolio</title>
     <meta charset="utf-8">
@@ -8,20 +8,18 @@
     <link rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
       integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
-      crossorigin="anonymous">
+      crossorigin="anonymous"/>
+      <link rel="stylesheet" type="text/css" href="StyleSheets/NavStyle.css"/>
   </head>
-  <body style="height: 100%;">
-    <div class="container-fluid px-0" style="position: absolute; top: 0; bottom: 0; right: 0; left: 0;">
-      <nav class="navbar navbar-dark bg-dark h-100 navbar-expand-lg"
-       style="position: relative; left: 0; width: 16.666667%;">
-       <button class="navbar-toggler w-100" type="button" data-toggle="collapse"
+  <body>
+    <div class="container-fluid px-0 navContainer">
+      <nav class="navbar navbar-dark bg-dark h-100 navbar-expand-lg navbarNav">
+       <button class="navbar-toggler w-100 buttonToggle" type="button" data-toggle="collapse"
         data-target="navbarToggler" aria-controls="navbarToggler"
-        aria-expanded="false" aria-label="Toggle navigation"
-        style="position: relative; top: -41%;">
+        aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon w-100"></span>
        </button>
-       <div class="collapse navbar-collapse" id="navbarToggler"
-        style="position: relative; top: -39%;">
+       <div class="collapse navbar-collapse" id="navbarToggler">
         <nav class="navbar-nav flex-column mx-auto">
           <a class="nav-link" href="https://stephenleija742.github.io">Home</a>
           <a class="nav-link active" href="">Blog</a>
