--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
        </button>
        <div class="collapse navbar-collapse" id="navbarToggler">
         <nav class="navbar-nav flex-column mx-auto">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="blog.html">Blog</a>
+          <a class="nav-item nav-link active" href="#">Home</a>
+          <a class="nav-item nav-link" href="blog.html">Blog</a>
         </nav>
       </div>
     </nav>
