--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,8 @@
               <label for="commentsection">Comment Section</label>
               <input name="commentVar" id="commentsection" class="form-control"
                type="text-area"/>
-              <input type="submit" name="Submit" value="Post Comment"/>
+              <input class="btn btn-primary" type="submit"
+               name="Submit" value="Post Comment"/>
             </div>
           </form>
         </div>
