--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,7 @@
               <label for="commentsection">Comment Section</label>
               <input name="commentVar" id="commentsection" class="form-control"
                type="text-area"/>
-              <input class="btn btn-primary" type="submit"
+              <button class="btn btn-primary" type="submit"
                name="Submit" value="Post Comment"/>
             </div>
           </form>
