added text to button

--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
               <input name="commentVar" id="commentsection" class="form-control"
                type="text-area"/>
               <button class="btn btn-primary" type="submit"
-               name="Submit" value="Post Comment"/>
+               name="Submit" value="Post Comment">Post Comment</button>
             </div>
           </form>
         </div>
