--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
       integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
       crossorigin="anonymous"/>
-    <link rel="stylesheet" type="text/css" href="https://github.com/stephenleija742/stephenleija742.github.io/tree/master/Stylesheets"/>
+    <link rel="stylesheet" type="text/css" href="NavStyle.css"/>
   </head>
   <body>
     <div class="container-fluid px-0 navContainer">
