--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
       integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
       crossorigin="anonymous"/>
-      <link rel="stylesheet" type="text/css" href="StyleSheets/NavStyle.css"/>
+      <link rel="stylesheet" type="text/css" href="NavStyle.css"/>
   </head>
   <body>
     <div class="container-fluid px-0 navContainer">
